--- a/active/index.html
+++ b/active/index.html
@@ -23,7 +23,7 @@
       </div>
       <div id="content">
          
-         <p>An upkept version of <a href="https://github.com/TheTIW/UV-Static">TIW's UV-Static</a></p>
+         <p>This is an Prøxy from (UV-Static V1.)</p>
 
          <form id="uv-form">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
