--- a/active/index.html
+++ b/active/index.html
@@ -47,11 +47,11 @@
       </div>
       <script src="stars.js"></script>
       
-      <script src="uv/uv.bundle.js" charset="UTF-8" defer></script>
-      <script src="uv/uv.config.js" charset="UTF-8" defer></script>
-      <script src="register-sw.js" charset="UTF-8" defer></script>
-      <script src="search.js" charset="UTF-8" defer></script>
-      <script src="index.js" charset="UTF-8" defer></script>
+      <script src="UV-Static/uv/uv.bundle.js" charset="UTF-8" defer></script>
+      <script src="UV-Static/uv/uv.config.js" charset="UTF-8" defer></script>
+      <script src="UV-Static/register-sw.js" charset="UTF-8" defer></script>
+      <script src="UV-Static/search.js" charset="UTF-8" defer></script>
+      <script src="UV-Static/index.js" charset="UTF-8" defer></script>
       </div>
    </body>
 </html>
